Feat: Ai 기능 및 일정 관리 기능 구현